--- a/contact-us.html
+++ b/contact-us.html
@@ -73,7 +73,7 @@
     <div class="parallax">
            <div class="company-description">
                <h4>Headquarters</h4>
-               <p>Toronto, Ontario</p>
+               <p>Guelph, Ontario</p>
            </div>
             <div id="contactUsMap" class="big-map"></div>
     </div>
