--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
     <div class="collapse navbar-collapse">
       <ul  class="nav navbar-nav navbar-right">
             <li>
-                <a href="components.html">
+                <a href="#recentpodcasts">
                      Recent Podcasts
                 </a>
             </li>
@@ -90,8 +90,8 @@
             <img src="assets/img/thumb.jpg" alt="..." />
         </div>
         <div class="small-info">
-            <h1>Real Estate | Tech | Finance</h1>
-            <h4>Stay up to date with the latest and greatest in real estate and finance.</h4>
+            <h1>Homes | Tech | Finance</h1>
+            <h4 class="margin-top-minus-10">The only podcast you need to stay up to date with the housing industry.</h4>
         </div>
     </div>
 
@@ -116,7 +116,7 @@
     </div>     
 -->
 
-    <div class="section section-description">
+    <div class="section section-description" id="recentpodcasts">
            <div class="container">
                <h2 class="section-title">Recent Podcasts</h2>
 
