--- a/index.html
+++ b/index.html
@@ -255,7 +255,7 @@
 
                    </div>
                    <div class="col-md-6">
-                       <h5>Interviews w/ real estate experts</h5>
+                       <h5>Interviews w/ real estate disrupstors</h5>
                        <p>
                            Getting into, and changing the real estate industry is no easy feat. Our podcast is here to tell the stories of those who are attempting to change the way we build, buy, invest and live in the places we call home.</p>
 
