--- a/contact-us.html
+++ b/contact-us.html
@@ -86,7 +86,7 @@
                        <p>
                            You can contact us if you have any questions about the Podcast. We're always looking for interesting guests and great sponsors. We'll get in touch with you as soon as possible.<br><br>
                         </p>
-                        <form role="form" id="contact-form" method="post">
+                        <form role="form" id="contact-form" action='https://www.getform.org/f/f641fe51-ca47-4f53-962f-be4d8bf9d05f' method="POST">
                             <div class="form-group">
                                 <label for="name">Your name</label>
                                 <input type="text" name="name" class="form-control" id="name" placeholder="First Name and Last Name"/>
