--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         <span class="icon-bar bar2"></span>
         <span class="icon-bar bar3"></span>
       </button>
-      <a class="navbar-brand" href="http://gsdk.creative-tim.com">real estate | <span class="grey-text">podcast</span></a>
+      <a class="navbar-brand" href="index.html">real estate | <span class="grey-text">podcast</span></a>
     </div>
 
     <!-- Collect the nav links, forms, and other content for toggling -->
