--- a/index.html
+++ b/index.html
@@ -267,9 +267,7 @@
                    <div class="col-md-6">
                        <h5>Interviews w/ real estate disrupstors</h5>
                        <p>
-                           Getting into, and changing the real estate industry is no easy feat. Our podcast is here to tell the stories of those who are attempting to change the way we build, buy, invest and live in the places we call home.</p>
-
-
+                           This podcast is here to tell the stories of those who are changing the way we build, buy, invest and live in the places we call home.</p>
                    </div>
                </div>
            </div>
